--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Poetry'
 - !lcc 'PQ'
+- GITenberg
 title: "O Renegado a António Rodrigues Sampaio\r\ncarta ao Velho Pamphletario sobre\
   \ a perseguição da imprensa"
 url: http://www.gutenberg.org/ebooks/28354
